[package]
name = "amana_escrow"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib is only needed for WASM deployment; rlib is used for tests on native
crate-type = ["rlib"]

[features]
# Enable this when building the WASM contract artifact
wasm = []

[dependencies]
soroban-sdk = "25.3.0"

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"
